调整了文本组件的编辑框横向占比 调整了组件操作按钮的位置与鼠标移入效果 修复了带参输入框在编辑时，参数浮窗错误触发的问题

--- a/assets/style.css
+++ b/assets/style.css
@@ -151,9 +151,10 @@ el-tooltip {
 .grid-stack-item>.ui-resizable-se {
   border-radius: 24px;
   padding: 4px;
+  bottom: -4px;
+  right: -4px;
 
   &:hover {
-    scale: 1.6;
     transform: rotate(225deg);
   }
 }
