--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,10 @@
 * {
 }
 
+:root {
+  --background-opacity: rgba(255, 255, 255, 0.6);
+}
+
 .menu {
   .el-button.is-plain {
     --el-button-hover-text-color: #ffffff;
@@ -89,61 +93,6 @@
   }
 }
 
-.commonDialog {
-  height: calc(80% - 2px);
-  max-height: calc(80% - 2px);
-  --el-dialog-padding-primary: 0;
-  --el-dialog-border-radius: 0;
-  --el-dialog-bg-color: rgb(255, 255, 255);
-  backdrop-filter: blur(10px);
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-
-  .el-dialog__header {
-    padding: 12px 16px;
-    background-color: var(--el-color-primary);
-    display: flex;
-    align-items: center;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-
-    .el-dialog__title {
-      color: white;
-      font-weight: bold;
-    }
-
-    .el-dialog__headerbtn {
-      top: unset !important;
-    }
-
-    .el-dialog__headerbtn .el-dialog__close {
-      color: white !important;
-      font-size: 24px !important;
-    }
-  }
-
-  .el-dialog__body {
-    height: calc(100% - 128px);
-    max-height: calc(100% - 128px);
-    padding: 16px;
-    overflow-x: hidden;
-    /* 对其中的第一个子组件设置高度为100% */
-
-    > *:first-child {
-      height: 100% !important;
-      overflow: auto;
-    }
-  }
-
-  .el-dialog__footer {
-    padding: 8px;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.3);
-  }
-
-  .el-textarea__inner, .el-textarea {
-    height: 100%;
-  }
-}
-
 el-tooltip {
   pointer-events: none;
 }
@@ -156,6 +105,58 @@ el-tooltip {
 
   &:hover {
     transform: rotate(225deg);
+  }
+}
+
+/* 代码编辑器 */
+.v-codemirror {
+
+  .cm-gutters-before {
+    background-color: #f5f5f56e !important;
+  }
+
+  .cm-content {
+    background-color: rgba(255, 255, 255, 0.3);
+    font-size: 18px;
+  }
+}
+
+/* 设置滚动条整体样式，可设置宽度和高度 */
+::-webkit-scrollbar {
+  width: 8px; /* 竖直滚动条宽度 */
+  height: 8px; /* 水平滚动条高度 */
+}
+/* 设置滚动条轨道样式 */
+::-webkit-scrollbar-track {
+}
+/* 设置滚动条滑块样式 */
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.2); /* 悬停时略微可见 */
+  border-radius: 4px; /* 可根据需求设置滑块圆角 */
+}
+/* 可设置滑块悬停时的样式 */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.4); /* 悬停时略微可见 */
+}
+
+.el-textarea__inner {
+  &:focus {
+    animation: inputBlink 1s ease-in-out infinite;
+  }
+}
+
+.el-input__wrapper {
+  padding: 0;
+  &.is-focus {
+    box-shadow: 0 0 0 1px var(--el-input-border-color,var(--el-border-color)) inset;
+  }
+
+  .el-input__inner {
+    padding: 1px 12px;
+    height: 100%;
+    &:focus {
+      animation: inputBlink 1s ease-in-out infinite;
+    }
   }
 }
 
@@ -199,5 +200,14 @@ el-tooltip {
   }
   100% {
     transform: rotate(-1deg);
+  }
+}
+
+@keyframes inputBlink {
+  0%, 100% {
+    box-shadow: inset 0 0 14px transparent;
+  }
+  50% {
+    box-shadow: inset 0 0 14px rgba(0, 0, 0, 0.4);
   }
 }
