修复自定义格子描述浮窗鼠标移入时元素消失时导致的定位错误问题 调整了各种样式 调整了消息弹窗的位置 改变了文本编辑框的光标样式，使其更显著

--- a/assets/dialog.css
+++ b/assets/dialog.css
@@ -85,11 +85,18 @@
     align-items: center;
     gap: 8px;
     border-radius: 0 0 10px 10px;
+    height: 48px;
 
     .transfer {
       cursor: move;
       font-size: 32px;
       color: #ff5858;
+
+      &:hover {
+        svg {
+          scale: 1.4;
+        }
+      }
 
       svg {
         padding: 4px;
@@ -114,5 +121,11 @@
       background-color: rgba(0, 0, 0, 0.5);
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
     }
+  }
+
+  .cm-editor {
+    height: calc(100% - 4px);
+    width: calc(100% - 4px);
+    border: 2px solid rgba(255, 255, 255, 0.8);
   }
 }
