修正编辑框中的光标位置 修复按钮组件导致的横向移除 增加了布局编辑，现在支持自定义网格大小，并允许横向滚动了 几个基础配置文件调整

--- a/assets/dialog.css
+++ b/assets/dialog.css
@@ -64,6 +64,26 @@
     }
   }
 
+  .el-form {
+    .el-form-item__label {
+      border-left: 8px solid rgba(255, 162, 23, 0.5);
+      padding-left: 8px;
+      height: 22px;
+      line-height: 22px;
+      margin-bottom: 4px;
+    }
+
+    .el-form-item__label {
+      background-color: #eaf5ff;
+    }
+
+    .el-form-item {
+      padding: 8px;
+      margin-bottom: 0;
+    }
+
+  }
+
   .el-input {
     .el-input__wrapper {
       background-color: var(--background-opacity);
