--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,10 @@
 * {
+  --el-color-primary: rgba(21, 160, 255, 0.6);
 }
 
 :root {
   --background-opacity: rgba(255, 255, 255, 0.6);
-  --cursor-text: url("./cursor/text.cur");
+  --cursor-text: url("./cursor/text.cur") 10 8;
 }
 
 .menu {
@@ -114,6 +115,7 @@ el-tooltip {
 
   .cm-gutters-before {
     background-color: #f5f5f56e !important;
+    backdrop-filter: blur(4px);
   }
 
   .cm-content {
@@ -143,29 +145,55 @@ el-tooltip {
   background: rgba(0, 0, 0, 0.4); /* 悬停时略微可见 */
 }
 
-.el-textarea__inner {
-  &:hover {
-    cursor: var(--cursor-text), auto;
-  }
-  &:focus {
-    animation: inputBlink 1s ease-in-out infinite;
-  }
-}
-
-.el-input__wrapper {
-  padding: 0;
-  &.is-focus {
-    box-shadow: 0 0 0 1px var(--el-input-border-color,var(--el-border-color)) inset;
-  }
-
-  .el-input__inner {
-    padding: 1px 12px;
-    height: 100%;
+.el-input {
+  .el-textarea__inner {
     &:hover {
       cursor: var(--cursor-text), auto;
     }
     &:focus {
       animation: inputBlink 1s ease-in-out infinite;
+    }
+  }
+
+  .el-input__wrapper {
+    padding: 0;
+    &.is-focus {
+      box-shadow: 0 0 0 1px var(--el-input-border-color,var(--el-border-color)) inset;
+    }
+
+    .el-input__inner {
+      padding: 1px 12px;
+      height: 100%;
+      &:hover {
+        cursor: var(--cursor-text), auto;
+      }
+      &:focus {
+        animation: inputBlink 1s ease-in-out infinite;
+      }
+    }
+  }
+}
+
+textarea {
+  &:hover {
+    cursor: var(--cursor-text), auto;
+  }
+}
+
+.el-input-number {
+  .el-input__wrapper {
+    padding-left: 30px !important;
+    padding-right: 42px !important;
+  }
+
+  .el-input__wrapper {
+    &:not(:has(.el-input__suffix)) {
+      padding-left: 30px;
+      padding-right: 30px !important;
+      .el-input-number {
+        padding-left: 30px;
+        padding-right: 30px;
+      }
     }
   }
 }
@@ -175,6 +203,15 @@ el-tooltip {
   font-size: 24px;
   opacity: 0.8;
   box-shadow: 0 0 14px rgba(0, 0, 0, 0.6);
+}
+
+.el-message-box {
+  background-color: #ffffff5c;
+  backdrop-filter: blur(4px);
+
+  .el-message-box__content {
+    color: #353535;
+  }
 }
 
 /* 背景滚动动画 */
@@ -225,6 +262,6 @@ el-tooltip {
     box-shadow: inset 0 0 14px transparent;
   }
   50% {
-    box-shadow: inset 0 0 14px rgba(0, 0, 0, 0.4);
+    box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.4);
   }
 }
