--- a/assets/dialog.css
+++ b/assets/dialog.css
@@ -1,7 +1,7 @@
 .commonDialog {
   --el-dialog-padding-primary: 0;
   --el-dialog-border-radius: 0;
-  --el-dialog-bg-color: rgba(209, 209, 209, 0.6);
+  --el-dialog-bg-color: var(--background-color);
   backdrop-filter: blur(10px);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
@@ -9,11 +9,13 @@
   .el-dialog__header {
     padding: 12px 16px;
     height: 24px;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: var(--dialog-background-bar);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
     display: flex;
     align-items: center;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-    border-radius: 10px 10px 0 0;
+    border-radius: 8px 8px 0 0;
+    z-index: 3;
+    position: relative;
 
     .el-dialog__title {
       color: white;
@@ -41,24 +43,13 @@
     max-height: 70vh;
     padding: 16px;
     overflow-x: hidden;
+    z-index: 1;
+    position: relative;
     /* 对其中的第一个子组件设置高度为100% */
 
     > *:first-child {
       height: 100%;
       overflow: auto;
-    }
-  }
-
-  .el-textarea {
-    height: 100%;
-
-    .el-textarea__inner {
-      height: 100%;
-      background-color: var(--background-opacity);
-
-      &::placeholder {
-        color: #888888;
-      }
     }
   }
 
@@ -69,9 +60,6 @@
       height: 22px;
       line-height: 22px;
       margin-bottom: 4px;
-    }
-
-    .el-form-item__label {
       background-color: #eaf5ff;
     }
 
@@ -82,30 +70,18 @@
 
   }
 
-  .el-input {
-    .el-input__wrapper {
-      background-color: #ffffff80;
-
-      .el-input__inner {
-        color: #3b3b3b;
-
-        &::placeholder {
-          color: #888888;
-        }
-      }
-    }
-  }
-
   .el-dialog__footer {
     padding: 8px;
-    background-color: rgba(255, 255, 255, 0.1);
-    box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.3);
+    background-color: var(--dialog-background-bar);
+    box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.4);
     display: flex;
     justify-content: flex-end;
     align-items: center;
     gap: 8px;
-    border-radius: 0 0 10px 10px;
+    border-radius: 0 0 8px 8px;
     height: 48px;
+    z-index: 3;
+    position: relative;
 
     .transfer {
       cursor: move;
@@ -132,25 +108,6 @@
       padding: 0;
       height: 0;
     }
-  }
-
-  .el-button--primary {
-    background-color: rgba(0, 0, 0, 0.3);
-    border: none;
-
-    &:hover {
-      background-color: rgba(0, 0, 0, 0.5);
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-    }
-  }
-
-  .el-button {
-    --el-button-bg-color: #919191;
-    --el-button-hover-bg-color: rgb(85 85 85);
-    --el-button-hover-text-color: #d9d9d999;
-    --el-button-hover-border-color: 0;
-    --el-button-border-color: 0;
-    --el-border: 0;
   }
 
   .cm-editor {
