--- a/assets/style.css
+++ b/assets/style.css
@@ -71,6 +71,49 @@
   }
 }
 
+.el-tag {
+  margin: 6px;
+  font-size: large;
+  padding: 8px 16px;
+  cursor: pointer;
+  height: unset;
+  user-select: none;
+  border-radius: 24px;
+  border: 2px solid #ffffff;
+  color: #ffffff;
+  background-color: #939393;
+
+  &:hover {
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  }
+
+  &.activeTag {
+    color: white;
+    background-color: var(--primary-color);
+    font-weight: bold;
+  }
+
+  &.is-closable {
+    .el-tag__close {
+      height: 20px;
+      width: 20px;
+      color: white;
+      margin: 0 6px;
+
+      svg {
+        color: white;
+      }
+    }
+  }
+
+  svg {
+    &:hover {
+      scale: 1.4;
+      transform: rotate(360deg);
+    }
+  }
+}
+
 .el-select {
   .el-select__wrapper {
     border: 1px solid var(--primary-color);
@@ -144,6 +187,7 @@
   border-bottom: 12px solid var(--dialog-background-bar);
   border-right: unset;
   border-left: unset;
+  border-radius: 8px;
 }
 
 .el-textarea {
