--- a/assets/style.css
+++ b/assets/style.css
@@ -288,8 +288,14 @@ textarea {
 .el-message {
   font-weight: bold;
   font-size: 24px;
-  opacity: 0.8;
+  opacity: 1;
+  border-radius: 8px;
+  background-color: var(--background-color);
   box-shadow: 0 0 14px rgba(0, 0, 0, 0.6);
+  border-top: 12px solid var(--dialog-background-bar);
+  border-bottom: 12px solid var(--dialog-background-bar);
+  border-left: unset;
+  border-right: unset;
 }
 
 /* 背景滚动动画 */
