在window上绑定了部分方法 延迟了快捷键提示显示，现在需要按下约0.5s后才会弹出提示 调整了快速链接拖拽触发，现在将拖拽触发放到了拖拽按钮上，避免输入框误发

--- a/assets/dialog.css
+++ b/assets/dialog.css
@@ -85,7 +85,7 @@
     .transfer {
       cursor: move;
       font-size: 32px;
-      color: #ff5858;
+      color: var(--color-transfer);
 
       &:hover {
         svg {
