全局样式标签增加拖拽分享 设置中的语言选项更改为标签 网页组件的iframe沙盒设置中增加了allow-downloads

--- a/assets/style.css
+++ b/assets/style.css
@@ -258,6 +258,24 @@ el-tooltip {
   }
 }
 
+.transfer {
+  cursor: move;
+  font-size: 32px;
+  color: var(--color-transfer);
+
+  &:hover {
+    svg {
+      scale: 1.4;
+    }
+  }
+
+  svg {
+    padding: 4px;
+    border-radius: 24px;
+  }
+}
+
+
 /* 代码编辑器 */
 .v-codemirror {
 
