修复背景图片代码错误处理的问题 增加了样式编辑框的预览按钮，鼠标移上去后会透明化弹窗 在背景样式中代码样式模式下，增加了颜色选择器

--- a/assets/dialog.css
+++ b/assets/dialog.css
@@ -6,6 +6,10 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
 
+  &:has(.previewButton:hover) {
+    opacity: 0;
+  }
+
   .el-dialog__header {
     padding: 12px 16px;
     height: 24px;
