--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,7 @@
   --color-black: #292929;
   --dialog-background-bar: #292929;
   --dialog-background-footer: #292929;
-  --cursor-text: url("./cursor/text.cur") 10 8;
+  --cursor-text: unset;
   --button-border-top: unset;
   --button-border-left: 3px solid #292929;
 
