修复zip配置压缩包中无法导入图片的问题 调整操作按钮大小的最小宽度 所有ID都去掉了横线 代码编辑器去掉了动画属性避免了滚动错位问题

--- a/assets/style.css
+++ b/assets/style.css
@@ -279,6 +279,10 @@ el-tooltip {
 /* 代码编辑器 */
 .v-codemirror {
 
+  * {
+    transition: none;
+  }
+
   .cm-gutters-before {
     background-color: #f5f5f56e !important;
     backdrop-filter: blur(4px);
