样式预览去除了背景盖层 修复了网页组件在编辑时参数值丢失的问题

--- a/assets/dialog.css
+++ b/assets/dialog.css
@@ -1,3 +1,10 @@
+.el-overlay {
+
+  &:has(.previewButton:hover) {
+    background: none;
+  }
+}
+
 .commonDialog {
   --el-dialog-padding-primary: 0;
   --el-dialog-border-radius: 0;
